--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,6 +27,18 @@ div.search {
 	max-width: 840px;
 	min-width: 430px;
 }
+div.return-to-search-button {
+	width: 25px;
+	height: 25px;
+	cursor: pointer;
+	margin-bottom: 15px;
+	-webkit-background-size: 100%;
+	background-size: 100%;
+	background-position: fixed;
+	background-repeat: no-repeat;
+	float: left;
+	background: url(../img/return.png);
+}
 div.video-preview {
 	position: absolute;
 	top: 35%;
@@ -37,7 +49,7 @@ div.video-preview {
 	width: 95%;
 	height: 530px;
 	margin: 0 auto;
-	margin-top: -135px;
+	margin-top: -145px;
 	text-align: left;
 	max-width: 840px;
 	min-width: 430px;
